dashboard.css
.Dashboard {
    display: flex;
    flex-direction: column;
    gap: 20px;
    padding: 20px;
    width: 20%;
    background-color: lightblue;
}
.section1 div img {
    width: 20px;
    height: 20px;
    margin-right: 5px;
}
.section0 img {
    width: 30px;
    height: 30px;
}
.section0 {
    display: flex;
    align-items: center;
    gap: 5px;
}
.section1 {
    display: flex;
    flex-direction: column;
    gap: 5px;
}
.section1 div {
    display: flex;
    align-items: center;
}

